@@ -11,7 +11,11 @@ Version 0.7-11 (??-??-2012, Rev. 13??)
 - When graphs are saved from the GUI the slot graph@m is now
   always numeric when no variables are involved.  
 
-- calcPower does not always set the same seed as default.
+- Method calcPower does not always set the same seed as default.
+
+- Power simulations for different variable values. 
+
+- After testing the Reset Button resets to the graph with variables.  
 
 - Extended unit tests. See method unitTestsGMCP.
   Option extended=TRUE will run small power simulations.
